# quantcoder-cli

./: .env.example  .git-branches-guide.md  .gitignore  ARCHITECTURE.md  ASSESSMENT_SUMMARY.md  BRANCH_ASSESSMENT.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_BRANCH_COMPARISON.md  CONTRIBUTING.md  Dockerfile  GAMMA_UPGRADE_PROPOSAL.md  GAMMA_VS_OPENCODE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAIN_VS_BETA.md  MOBILE_BRANCH_GUIDE.md  PRODUCTION_READINESS_REVIEW.md  PRODUCTION_SETUP.md  PROD_READINESS_ASSESSMENT.md  QUALITY_ASSESSMENT.md  QUALITY_CHECKLIST.md  README.md  README_v2.md  SECURITY.md  architecture-complete.excalidraw  architecture.excalidraw  docker-compose.yml  pyproject.toml  pytest.ini  reorganize-branches.sh  requirements-legacy.txt  requirements-lock.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: BRANCH_VERSION_MAP.md  NEW_FEATURES_V4.md  QUALITY_ASSESSMENT.md  RUNBOOK.md  TROUBLESHOOTING.md  VERSION_COMPARISON.md
quantcli/: backend.py  backend_factory.py  cli.py  processor.py
quantcli/evolver/: __init__.py  config.py  engine.py  evaluator.py  persistence.py  variation.py
quantcoder/: __init__.py  chat.py  cli.py  config.py  editor.py
quantcoder/agents/: __init__.py  alpha_agent.py  base.py  coordinator_agent.py  risk_agent.py  strategy_agent.py  universe_agent.py
quantcoder/autonomous/: __init__.py  database.py  learner.py  pipeline.py  prompt_refiner.py
quantcoder/codegen/: __init__.py  multi_file.py
quantcoder/core/: __init__.py  http_utils.py  llm.py  processor.py  qc_linter.py
quantcoder/evolver/: __init__.py  config.py  engine.py  evaluator.py  persistence.py  variation.py
quantcoder/execution/: parallel_executor.py
quantcoder/llm/: __init__.py  providers.py
quantcoder/mcp/: __init__.py  quantconnect_mcp.py
quantcoder/pipeline/: __init__.py  auto_mode.py  baseline.py  quant_refiner.py
quantcoder/scheduler/: __init__.py  automated_pipeline.py
quantcoder/tools/: __init__.py  article_tools.py  base.py  code_tools.py  file_tools.py
tests/: __init__.py  conftest.py  demo_ollama_integration.py  test_agentic_integration.py  test_agents.py  test_autonomous.py  test_backend.py  test_backend_factory.py  test_cli.py  test_config.py  test_e2e.py  test_evolver.py  test_integration.py  test_library.py  test_llm.py  test_llm_providers.py  test_mcp.py  test_performance.py  test_pipeline_integration.py  test_processor.py  test_qc_linter.py  test_scheduler.py  test_tools.py
