[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantcoder-cli"
version = "2.0.0"
description = "A modern CLI coding assistant for generating QuantConnect trading algorithms from research articles with AlphaEvolve-inspired evolution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "SL-MAR", email = "smr.laignel@gmail.com"}
]
keywords = ["quantconnect", "trading", "algorithmic-trading", "cli", "ai", "llm", "evolution", "alphaevolve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "pdfplumber>=0.10.0",
    "spacy>=3.7.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "mistralai>=0.1.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pygments>=2.17.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "toml>=0.10.2",
    "InquirerPy>=0.3.4",
    "apscheduler>=3.10.0",
    # Production reliability dependencies
    "keyring>=25.0.0",           # Secure credential storage
    "tenacity>=8.2.0",           # Retry with exponential backoff
    "pybreaker>=1.0.0",          # Circuit breaker pattern
    "python-json-logger>=2.0.0", # Structured JSON logging
    # Security: minimum versions for transitive dependencies (CVE fixes)
    "cryptography>=43.0.1",  # CVE-2023-50782, CVE-2024-0727, PYSEC-2024-225, GHSA-h4gh-qq45-vh27
    "setuptools>=78.1.1",    # CVE-2024-6345, PYSEC-2025-49
    "wheel>=0.46.2",         # CVE-2026-24049
    "pip>=25.0",             # CVE-2025-8869
]

[project.optional-dependencies]
# LLM Provider extras - install only what you need
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
mistral = ["mistralai>=0.1.0"]
all-llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "mistralai>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.23.0",  # Required for async test support
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0",
    "pip-audit>=2.6",
]

[project.scripts]
quantcoder = "quantcoder.cli:main"
qc = "quantcoder.cli:main"

[project.urls]
Homepage = "https://github.com/SL-Mar/quantcoder-cli"
Repository = "https://github.com/SL-Mar/quantcoder-cli"
Issues = "https://github.com/SL-Mar/quantcoder-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantcoder*"]
exclude = ["tests*", "quantcli*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "spacy.*",
    "pygments.*",
    "InquirerPy.*",
    "rich.*",
    "toml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance benchmarks",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["quantcoder"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
